2007-06-09 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-contact-list-view.c: Fix warning for DnD.
	patch imported from gossip.

2007-06-09 Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump version to 0.8

	* libempathy-gtk/gossip-ui-utils.c: Fix usage of contact subscription
	property.

	* data/gtalk.profile:
	* data/jabber.profile:
	* data/msn.profile: Add VCardField and VCardDefault to profiles for
	eds-sync support.

2007-06-09 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-contact-widget.c: Fix a warning.

2007-06-09 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-main-window.c:
	* libempathy-gtk/empathy-contact-widget.glade:
	* libempathy-gtk/empathy-contact-dialogs.c:
	* libempathy-gtk/empathy-contact-dialogs.h:
	* libempathy-gtk/empathy-contact-widget.c: We can now add a new contact.
	EmpathyContactWidget can change the contact it's displaying on-the-fly,
	like that we can display info when typing the contact ID we want to
	add to our contact list.

	* libempathy/empathy-tp-contact-list.c: Fix a refcount bug.

2007-06-08 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/gossip-chatroom-manager.c: Checks if the chatroom has
	an account and a room. Fixes bug #444135.

2007-06-08 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-contact-dialogs.c:
	* libempathy-gtk/empathy-contact-widget.c:
	* libempathy-gtk/empathy-contact-widget.h: Do not save when closing the
	dialog. Update information in real-time and just provides a "Close"
	button. That's more GNOME spirite.
	* libempathy/empathy-tp-contact-list.c:
	* libempathy/gossip-contact.h:
	* libempathy/gossip-contact.c: New methods:
	gossip_contact_add/remove_group(). This fixes leaks when a contact is
	added/removed from a group.

2007-06-08 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-chat.c: Fix build on 64bits arch.
	Fixes bug #444680 (Matej Cepl).

2007-06-06 Xavier Claessens  <xclaesse@gmail.com>
